k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      imagePullSecrets:
        - name: dockerhub-secret

      containers:
        - name: my-app
          image: bronsboro/my-app:v1
